feat: add user model; add user handlers; add generic handleUpdateEntityByID
